--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@badeball/cypress-cucumber-preprocessor": "^21.0.2",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.3",
+    "babel-loader": "^9.2.1",
     "cypress": "^13.15.2",
-    "cypress-file-upload": "^5.0.8"
+    "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-file-upload": "^5.0.8",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   }
 }
